--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -9,3 +9,4 @@ $addbtn: #00859B;
 $reindeer-moss: #c4d6a4;
 $error-red-dark: #dc3545;
 $error-red-light: #f8d7da;
+$bs-gray-light: rgba(0, 0, 0, 0.125);
